# pyfasc

./: .gitignore  README.md  input.txt
.github/workflows/: PIPELINE_OVERVIEW.md  README.md  algorithm-validation.yml  grid-convergence-validation.yml  grid-convergence.yml  validation.yml
codes/01_advDiffSolver/: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  besprechung.txt  config.txt  diagnosetool.py  input.txt  inputs.txt  program.cpp  program.jl  program.py  pyproject.toml  requirements.txt  setup.py  start_codebench.py  temp_cpp_exec  validate_grid_convergence.py  validate_grid_convergence_cpp.py
codes/01_advDiffSolver/CodeBench/: besprechung.txt  program.cpp  program.py  requirements.txt  temp_cpp_exec  validate.py
codes/01_advDiffSolver/CodeBench/results/: all_metrics.json
codes/01_advDiffSolver/adapters/: README.md  __init__.py  adapter_helpers.py  base_adapter.py  config_parser.py  cpp_adapter.py  custom_adapters_example.py  julia_adapter.py  python_adapter.py  registry.py  utils.py
codes/01_advDiffSolver/assets/: styles.css
codes/01_advDiffSolver/config/: config.txt  input.txt  inputs.txt  languages.yaml  test_inputs.txt  test_multi_grid.txt
codes/01_advDiffSolver/readmes/: ARCHITECTURE.md  INSTALLATION.md  PACKAGE_SETUP.md  README_old.md  USAGE.md  WINDOWS_ENCODING_FIX.md
codes/01_advDiffSolver/results/: all_metrics.json
codes/01_advDiffSolver/scripts/: compare_py_cpp_grids.py  compare_py_cpp_steps.py  create_bar_chart.py  create_csv_data.py  create_difference_chart.py  create_download_package.py  create_loglog_chart.py  create_results_table.py  diagnosetool.py  run_cpp_multi_grids.py  run_cpp_multi_steps.py  run_py_multi_grids.py  run_py_multi_steps.py
codes/01_advDiffSolver/src/: program.cpp  program.jl  program.py  program_buggy.cpp
codes/01_advDiffSolver/tests/: convTestNumpy.py  convergenceTest.md  diagnosetool.py  grid_convergence_validator.py  run_validation.py  validate.py  validate_grid_convergence.py  validate_grid_convergence_cpp.py  validation.md
codes/01_advDiffSolver/utils/: benchmark_utils.py  console_utils.py  file_utils.py  results_utils.py  session_utils.py  ui_utils.py
