[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "codebench-analyzer"
version = "2.0.0"
description = "A flexible benchmarking tool for comparing programming language performance"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["benchmark", "performance", "python", "cpp", "julia", "rust", "go", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "streamlit>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "matplotlib>=3.4.0",
    "pillow>=8.0.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
codebench = "scripts.diagnosetool:main"

[project.urls]
Homepage = "https://github.com/tlunet/pyfasc"
Documentation = "https://github.com/tlunet/pyfasc/blob/main/README.md"
Repository = "https://github.com/tlunet/pyfasc"
"Bug Tracker" = "https://github.com/tlunet/pyfasc/issues"

[tool.setuptools]
packages = ["adapters", "tests"]
include-package-data = true

[tool.setuptools.package-data]
adapters = ["*.yaml", "*.yml", "*.md"]
config = ["*.yaml", "*.yml", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
